--- a/about trinet.html
+++ b/about trinet.html
@@ -9,22 +9,80 @@
     p{
         font-family: Arial, Helvetica, sans-serif;
     }
-    button a{
+button {
        background: #181a1b;
   color: #fff;
   border: none;
   padding: 12px;
-  width: 100%;
+  width: 25%;
   font-size: 15px;
   border-radius: 6px;
   cursor: pointer;
   text-decoration: none;
   text-align: center;
     }
+    body {
+  font-family:'Courier New', Courier, monospace;
+  background: linear-gradient(135deg, #ecedf2, #d9d4d4);
+  text-align: center;
+  padding: 20px;
+} 
+
+h3,h2{ 
+  color: #020000;
+  margin-bottom: 20px;
+} 
+
+.gallery {
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 15px;
+}
+
+.gallery img {
+  width: 100%;
+  border-radius: 10px;
+  cursor:pointer;
+  transition: transform 0.3s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+/* Modal (fullscreen image) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  max-width: 90%;
+  max-height: 80%;
+  border-radius: 10px;
+}
+
+#close {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
 </style>
 <body>
    <h2> TRINETRA – IoT Based Cyber Defense System</h2>
-
+<p>Note:"This project is a controlled simulation for educational purpose only.
+   Unauthorized replication or misuse is prohibited"</p>
 <h3>🔹 Introduction</h3>
 <p>
 
@@ -98,7 +156,20 @@ This ensures that the protected server or network remains safe from intrusion at
 </p>
 
 ---
-
+<section>
+<h3> Sample Screenshot</h3><div class="gallery">
+<img src="WhatsApp Image 2025-09-14 at 01.10.39_86356472.jpg">
+<img src="s1.jpg" alt="">
+<img src="s2.jpg" alt="">
+<img src="s3.jpg" alt="">
+<img src="ss1.jpg" alt="">
+<img src="ss2.jpg" alt="">
+</div>
+  <div id="modal" class="modal">
+    <span id="close">&times;</span>
+    <img class="modal-content" id="modal-img">
+  </div>
+</section>
 <h3>🔹 Role of Each Component</h3>
 
 <p>
@@ -135,6 +206,32 @@ Can be extended to industry use with cloud-based alerts and AI analysis.</p>
 
 <p>TRINETRA demonstrates how cybersecurity defense systems work in reality by combining network monitoring, deception, and IoT alerts. It gives students practical exposure to both offensive (Red Team) and defensive (Blue Team) roles while integrating cutting-edge IoT technology for 
     real-time alerts.</p>
-    <button type="submit"><a href="comport.html">Back to Portfolio</a></button>
+    <a href="comport.html"><button>Back to Portfolio</button></a>
 </body>
+<script>
+// Step 1: Select the elements
+const images = document.querySelectorAll(".gallery img");
+const modal = document.getElementById("modal");
+const modalImg = document.getElementById("modal-img");
+const closeBtn = document.getElementById("close");
+
+// Step 2: Add click event to every image
+images.forEach(img => {
+  img.addEventListener("click", () => {
+    modal.style.display = "flex"; // show modal
+    modalImg.src = img.src;       // set clicked image inside modal
+  });
+});
+
+// Step 3: Close modal when clicking "×"
+closeBtn.addEventListener("click", () => {
+  modal.style.display = "none";
+});
+
+// Step 4: Close modal if clicking outside the image
+modal.addEventListener("click", (e) => {
+  if (e.target === modal) {
+    modal.style.display = "none";
+  }
+});</script>
 </html>
