--- a/about trinet.html
+++ b/about trinet.html
@@ -206,7 +206,7 @@ Can be extended to industry use with cloud-based alerts and AI analysis.</p>
 
 <p>TRINETRA demonstrates how cybersecurity defense systems work in reality by combining network monitoring, deception, and IoT alerts. It gives students practical exposure to both offensive (Red Team) and defensive (Blue Team) roles while integrating cutting-edge IoT technology for 
     real-time alerts.</p>
-    <a href="comport.html"><button>Back to Portfolio</button></a>
+    <a href="index.html"><button>Back to Portfolio</button></a>
 </body>
 <script>
 // Step 1: Select the elements
