--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       text-align: center;
       padding: 15px;
     }
-    #img,image,imag{
+    #img,#image,#imag{
       height: 2%;
       width: 2%;
     }
