--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
   </section>
   <section id="projects">
-    <h2>My Projects</h2><br>
+    <h2>Sample Projects</h2><br>
     <div class="projects">
       <div class="project">
         <h3>Profile Card</h3>
