--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ ESP32 IoT Device → sends real-time alerts
         <img src="linkedin_3991775.png" alt="linkedin" id="image">
     </a>
     <a href="https://www.instagram.com/x_._.ram_?igsh=MTFqbWN1eTNvZ2pvZA==">
-        <img src="307779-P800TT-551.jpg" alt="instagram"  id="img"></a>
+        <img src="insta.png" alt="instagram"  id="img"></a>
         <a href="saravananramprasad776@gmail.com" ><img src="mail.jpg" alt="" id="imag" ></a>
   </footer>
   <script>
