--- a/index.html
+++ b/index.html
@@ -129,15 +129,18 @@
     .skill:hover{
       transform-style: preserve-3d;
        transform:scale(1.10);
+       cursor: pointer;
     }
     html{
       scroll-behavior: smooth;
     }
     .project:hover{
         transform: scale(1.10);
+      cursor: pointer;
     }
     #mine:hover{
       transform: scale(1.10);
+      cursor: pointer;
     }
     #home{
       font-size: 3rem;
