--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ section.visible {
     <img src="Mine.jpg" alt="Profile" id="mine">
     <div>
       <h2>About Me</h2>
-      <p>I am a Computer Science student, passionate about web design and development.  
-      I love learning new technologies and building projects.</p>
+      <p>I'm a 3rd-year Computer Science Student passionate about building interactive web expriences.
+      when I'm not coding,you'll find me exploring cybersecurity projects or experimenting with IOT gadgets</p>
     </div>
   </section>
   <section id="skills">
