--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@ section.visible {
     <img src="Mine.jpg" alt="Profile" id="mine">
     <div>
       <h2>About Me</h2>
-      <p>I'm a 3rd-year Computer Science Student passionate about building interactive web expriences.
-      when I'm not coding,you'll find me exploring cybersecurity projects or experimenting with IOT gadgets</p>
+      <p style="font-family:bold">I'm a 3rd-year Computer Science Student passionate about building interactive web expriences.
+      when I'm not coding,you'll find me exploring cybersecurity projects or experimenting with IOT gadgets.
+      "I love blending design+code to bring ideas to Life"</p>
     </div>
   </section>
   <section id="skills">
