--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ ESP32 IoT Device → sends real-time alerts
     </form>
   </section>
   <section>
-    <h2>For Direct Contact  </h2>
+    <h2>Let's Connect📨</h2>
      <p> Email📧:ramprasad.s.m28@gmail.com</p>
      <p> Mobile📱:9344496603</p>
 
