--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@ ESP32 IoT Device → sends real-time alerts
   </section>
   <section>
     <h2>Let's Connect📨</h2>
+    <p>"Have a project,oppourtunity, or even a Coffee chat at mind? Drop me a message"</p>
      <p> Email📧:ramprasad.s.m28@gmail.com</p>
      <p> Mobile📱:9344496603</p>
 
