--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@ section.visible {
   opacity: 1;
   transform: translateY(0);
 }
+ .project button{
+  background:black;
+  text-decoration:none;
+  color: whitesmoke;
+}
+.project button:hover{
+  transform: scale(1.10);
+      cursor: pointer;
+}   
   </style>
 </head>
 <body>
@@ -232,6 +241,15 @@ ESP32 IoT Device → sends real-time alerts
 
             This project combines network security and IoT to protect servers and networks effectively.</p>
             <a href="about trinet.html">TRINETRA</a>
+      </div>
+       <div class="project">
+        <h3>Personal Notes</h3>
+        <p>A Simple Web app built HTML,CSS,JS
+          That let's user add,delete and view notes directly in the browser.
+          Notes are save using local Storage,so they Store even after 
+          refresing a page.
+        </p>
+        <a href="Notes/notes.html"><button>View project</button></a>
       </div>
     </div>
   </section>
