--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@ section.visible {
       <div class="project">
         <h3>Profile Card</h3>
         <p>A simple profile card built using HTML & CSS.</p>
-        <a href="minipro.html">Profile Card</a>
+        <a href="minipro.html"><button>Profile Card</button></a>
       </div>
       <div class="project">
         <h3>Contact Form</h3>
         <p>A working contact form with JavaScript validation.</p>
-        <a href="contactform.html">Contact Form</a>
+        <a href="contactform.html"><button>Contact Formv</button></a>
       </div>
       <div class="project">
         <h3> TRINETRA – IoT Based Cyber Defense System(ongoing)</h3>
@@ -240,7 +240,7 @@ ESP32 IoT Device → sends real-time alerts
                   </pre>
 
             This project combines network security and IoT to protect servers and networks effectively.</p>
-            <a href="about trinet.html">TRINETRA</a>
+            <a href="about trinet.html"><button>TRINETRA</button></a>
       </div>
        <div class="project">
         <h3>Personal Notes</h3>
